fixed the overflow x issue

--- a/app/styles/partials/_base.scss
+++ b/app/styles/partials/_base.scss
@@ -64,14 +64,14 @@ figcaption {
 
 article {
   background-color: #f5f5f5;
-  height: 100vh;
+  height: 100%;
   left: 0;
   overflow: auto;
   position: absolute;
   top: 0;
   transition: -webkit-transform .5s cubic-bezier(0.465, 0.183, 0.153, 0.946);
   transition: transform .5s cubic-bezier(0.465, 0.183, 0.153, 0.946);
-  width: 100vw;
+  width: 100%;
 }
 
 ul {
@@ -85,6 +85,15 @@ footer {
   margin: 8rem 0 7rem 0;
   padding-top: 2rem;
   text-align: center;
+}
+
+.body-wrapper {
+  height: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
 }
 
 .container {
