--- a/app/styles/partials/_mixins.scss
+++ b/app/styles/partials/_mixins.scss
@@ -33,8 +33,8 @@
 
     &.active {
       transform: translateX(0);
-      transition: -webkit-transform .5s cubic-bezier(0.465, 0.183, 0.153, 0.946);
-      transition: transform .5s cubic-bezier(0.465, 0.183, 0.153, 0.946);
+      transition: -webkit-transform .5s cubic-bezier(0.465, 0.183, 0.153, 0.946) .18s;
+      transition: transform .5s cubic-bezier(0.465, 0.183, 0.153, 0.946) .18s;
     }
   }
 }
